# cmake-template

./: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt
